Added default functions for Timestamp.java along with relevant functions in Metadata.java
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>